[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kita"
version = "0.1.0"
description = "A stupid command handler you probably shouldn't use."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "hikari==2.5.0",
    "typing-extensions==4.15.0"
]

[tool.setuptools.packages.find]
include = ["kita*"]