[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kita"
version = "0.1.0"
description = "A stupid command handler you probably shouldn't use."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "hikari @ git+https://github.com/norinorin/hikari.git@fix/web-resource",
    "typing-extensions==4.15.0"
]

[tool.setuptools.packages.find]
include = ["kita*"]