[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kita"
version = "0.1.0"
description = "A stupid command handler you probably shouldn't use."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    # fixme: switch back to stable when the fix gets released
    "hikari @ git+https://github.com/hikari-py/hikari.git@005521f13310f925e2c54c7c5d70a6c40ad71df6",
    "typing-extensions==4.15.0"
]

[tool.setuptools.packages.find]
include = ["kita*"]